--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,29 +1,37 @@
-<div class="container py-2">
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6">
+<div class="container position-relative bg-transparent">
+    <div class="position-absolute top-0 start-50 translate-middle-x w-100">
+        <div class="container py-2">
             <div class="row">
-                <div class="col-sm-12 col-lg-4 fs-5">Restauco</div>
-                <div class=" col-lg-8 d-none d-lg-block">
+                <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="row d-flex justify-content-between">
+                        <div class="col-sm-12 col-lg-4 logo d-flex">
+                            <i class="fa-solid fa-utensils fs-4 p-2 me-2"></i>
+                            Restauco
+                        </div>
+                        <div class=" col-lg-8 d-none d-lg-flex align-items-center justify-content-end p-0 m-0">
+                            <div class="row d-flex justify-content-between p-0 m-0">
+                                <div class="col-lg-3 d-flex justify-content-center"> <a href="">Home</a></div>
+                                <div class="col-lg-3 d-flex justify-content-center"> Menu</div>
+                                <div class="col-lg-3 d-flex justify-content-center"> About</div>
+                                <div class="col-lg-3 d-flex justify-content-center"> Contact</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-none d-xs-none d-sm-none d-md-block d-lg-block col-md-6">
                     <div class="row ">
-                        <div class="col d-flex justify-content-center"> Home</div>
-                        <div class="col d-flex justify-content-center"> Menu</div>
-                        <div class="col d-flex justify-content-center"> About</div>
-                        <div class="col d-flex justify-content-center"> Contact</div>
+                        <div class="col d-flex justify-content-end">
+                            <button type="button" class="btn btn-danger custom-button py-2 px-md-5">Book a
+                                Table</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="d-none d-xs-none d-sm-none d-md-block d-lg-block col-md-6">
-            <div class="row ">
-                <div class="col d-flex justify-content-end">
-                    <button type="button" class="btn btn-danger">Book a Table</button>
+            <div class="row">
+                <div class="col-lg-4 d-lg-none">
+                    menu home about contact
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4 d-lg-none">
-            menu home about contact
         </div>
     </div>
 </div>
