--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,21 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%- include('partials/head') %>
+        <link rel="stylesheet" href="./stylesheets/home.css">
         <title>Home Page</title>
 </head>
 
 <body>
-    <div class="container">
-        <%- include('partials/header') %>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col "></div>
-            <div class="col">
-                <img src="./images/home/h1_hero1.jpg" alt="">
+    <%- include('partials/header') %>
+        <div class="container-fluid header">
+            <div class="row">
+                <div class="col-xs-12 col-lg-6 d-flex align-items-stretch">
+                    <div class="d-flex align-items-center px-5">
+                    <div class="row">
+                        <div class="col-12 fs-1 fw-bold">
+                            Meet, Eat & Enjoy the true taste
+                        </div>
+                        <div class="col-12 fs-5">
+                            Making a reservation at Délicious restaurant is easy and takes just a couple of minutes.
+                        </div>
+                        <div class="col-12">
+                            <button type="button" class="btn">Our Menu</button>
+                        </div>
+                    </div></div>
+                </div>
+                <div class="d-none d-lg-block col-lg-6">
+                    <img class="img-fluid" src="./images/home/h1_hero1.jpg" alt="">
+                </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
