--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,9 @@
 
 <!-- public css -->
 <link rel="stylesheet" href="./stylesheets/partials/header.css">
+<link rel="stylesheet" href="./stylesheets/partials/footer.css">
 
 <!-- google font  -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mitr">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rampart One">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
