--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,10 +11,12 @@
 </head>
 
 <body>
+    <!-- navbar (header) -->
     <%- include('partials/header') %>
-        <div class="container-fluid header">
+        <!-- "title" container -->
+        <div class="container-fluid header h-font h-color">
             <div class="row">
-                <div class="col-xs-12 col-lg-6 d-flex align-items-stretch">
+                <div class="col-xs-12 col-lg-6 d-flex align-items-stretch ps-2 ps-lg-5">
                     <div class="d-flex align-items-center px-5">
                         <div class="row pt-5 pt-lg-0">
                             <div class="col-12 fs-1 fw-bold pt-5 pt-lg-0">
@@ -24,9 +26,10 @@
                                 Making a reservation at Délicious restaurant is easy and takes just a couple of minutes.
                             </div>
                             <div class="col-12 ">
-                                <button type="button"
-                                    class="btn btn-danger custom-button py-2 px-3 py-lg-3 px-lg-5 my-4 ">Our
-                                    Menu</button>
+                                <a href="#menu-container"><button type="button"
+                                        class="btn btn-danger custom-button py-2 px-3 py-lg-3 px-lg-5 my-4 ">Our
+                                        Menu</button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -36,10 +39,167 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt excepturi quia unde voluptatem ut, molestiae sequi commodi, adipisci nihil placeat omnis dolorum beatae a impedit accusamus reprehenderit vel voluptas ullam!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla beatae odio consectetur tenetur commodi ipsum fuga, saepe debitis qui vitae distinctio quas suscipit, dolorem iste, praesentium minus. Voluptas delectus repellat, laudantium maiores provident labore unde iusto itaque dolores. Minima harum eum maiores maxime nesciunt sit saepe mollitia, ipsa quo sunt, quis voluptatem. Vero molestias tempora omnis magnam eum. Aspernatur, quae ad, soluta, dolore molestias mollitia debitis deleniti aliquid esse aperiam quia. Totam, sunt, corporis aut assumenda possimus quam natus asperiores quis vel reprehenderit explicabo, praesentium laboriosam perspiciatis? Eveniet assumenda blanditiis accusantium, eos tempore ducimus commodi fugiat officia praesentium aut minus impedit porro laborum excepturi quisquam, quas voluptatum, labore et animi. Optio, perferendis nam nobis beatae velit, officia veritatis recusandae quidem itaque saepe accusamus ratione, minus ab fuga sint cupiditate quod quibusdam quisquam tempora! Consequatur iste earum nesciunt cum! Sapiente ipsam amet, accusamus dolorem dolore saepe veritatis? Dolorem dolor, tempora quae iure incidunt, cupiditate dicta eligendi repellendus sint magnam fuga eaque consequatur nulla ipsa, quasi ab dolorum? Error natus suscipit fugit labore a recusandae quae. Nostrum hic veritatis sint dolor distinctio alias praesentium necessitatibus, ex quo possimus modi quos doloribus atque, odio ut laboriosam error quibusdam! Labore sunt delectus, mollitia commodi, autem minus at ipsa obcaecati, sed et magni omnis vitae. Harum ex rem, optio soluta quaerat delectus veniam eius qui labore pariatur minus magnam sint rerum accusamus quasi architecto perspiciatis inventore possimus hic nostrum reprehenderit esse. Qui adipisci magnam repellendus accusamus, error vel, alias quia quaerat quibusdam similique eligendi dolorum eius. Corporis animi eos debitis quam dolore minus est, a quas ducimus sint commodi quia, possimus temporibus sequi voluptas optio delectus maiores sapiente et voluptatibus iure illum qui enim? Beatae sit odit maxime voluptate consectetur deserunt nostrum quibusdam. Aspernatur mollitia culpa, velit illum sint obcaecati fugiat necessitatibus pariatur quos nostrum, minima maiores, itaque exercitationem provident officiis? Exercitationem nisi consectetur quae error aliquid aut. Beatae reiciendis magnam recusandae suscipit vero officiis. Eum, perspiciatis delectus temporibus, culpa a quibusdam sed, tenetur doloribus tempora eveniet alias odio laudantium aut quod cumque architecto assumenda dicta fuga expedita. Quis explicabo reiciendis est culpa necessitatibus esse alias quae molestias labore? Repudiandae voluptatibus, dolore ab sapiente eveniet aut sequi laboriosam fugit accusantium natus tenetur reprehenderit molestiae facilis reiciendis commodi cumque neque molestias libero impedit ipsa error! Iste quaerat inventore dicta ducimus aliquid eveniet accusamus rem, omnis quae? Vitae natus, mollitia voluptate eum, minima explicabo corrupti saepe laudantium distinctio eos nesciunt quas commodi exercitationem porro quidem! Vitae incidunt vel, quis libero adipisci omnis a iste labore. Inventore doloribus totam corrupti voluptatibus culpa, deserunt quae accusamus maxime sit enim veniam excepturi quis esse recusandae reiciendis consequuntur incidunt? Nostrum, rem? Numquam maxime consectetur qui quia ipsum, quibusdam minus quidem ipsa amet nesciunt repellendus tempora tempore rem corrupti possimus libero provident fugiat, quis sed? Amet ex itaque tempore rem quibusdam voluptates alias dicta tenetur, exercitationem animi repudiandae nisi architecto. Voluptates blanditiis quisquam nulla pariatur ab rem et neque ullam, repudiandae non? Quibusdam praesentium nulla exercitationem sint animi minima ullam odio nihil quas, libero obcaecati repellat alias deserunt nemo adipisci aut dicta consectetur? Voluptas, doloremque. Architecto cumque dolorum doloribus possimus labore, nihil ducimus eveniet officia minus veniam, officiis eligendi. Tenetur veniam nisi id labore et rerum corporis, eveniet, voluptates beatae magnam corrupti ipsum, inventore vero similique est ullam laudantium non tempore praesentium eius placeat! Aspernatur dicta labore aut vitae laborum quam dolorem libero natus quaerat facilis voluptates alias, reiciendis quos ipsam sed, cum perferendis amet delectus non consectetur! Dolore optio velit beatae, debitis voluptatibus autem suscipit perspiciatis fuga ipsam! Aut animi qui facere doloremque, provident aliquam nemo ratione quod quibusdam voluptatibus aspernatur aliquid cum quam, expedita illo non rem natus reprehenderit repellendus? Beatae libero commodi necessitatibus corrupti illo debitis fuga accusantium expedita! Possimus laudantium error adipisci autem sapiente corporis voluptatum asperiores sint, sunt itaque qui totam architecto, eaque vitae deleniti, praesentium quod voluptatibus. Illo tempora, cum quae aliquam sequi inventore voluptates rerum possimus nam accusantium sed, quod deleniti tempore est explicabo enim, ipsum distinctio ut repellat commodi. Delectus nulla illo expedita fugiat necessitatibus quaerat, numquam dolore. Voluptas et aspernatur neque accusantium, fugiat doloremque, libero rem voluptatum eum sequi magni illo iusto officia animi earum! Quidem molestias cum nobis qui deserunt veniam ipsa et eaque excepturi iste distinctio soluta harum id quam officia perferendis voluptates velit sapiente quo, fuga ipsum. Consequuntur aliquam modi dignissimos aspernatur possimus, tempore dolores quo voluptatem optio sapiente perspiciatis soluta, beatae eaque ipsa, ex asperiores eum aliquid accusantium placeat. Adipisci magni inventore harum iste beatae voluptates nobis ratione id repellendus odit dolorem, repellat maxime explicabo, iusto placeat recusandae commodi! Non sapiente sunt aliquid temporibus, atque velit tempore accusantium ducimus officia mollitia asperiores tempora ratione ex magnam odit nostrum quas obcaecati eius corporis! Voluptas blanditiis ratione fugiat molestias in! Quidem voluptate corporis quibusdam vitae facilis similique eveniet quia consectetur quam amet earum adipisci error, non aliquid voluptas at magnam, voluptatem quae nesciunt animi eaque! Possimus, pariatur modi. Sapiente eum necessitatibus quisquam aperiam ab. Iusto harum corporis possimus facere esse hic ut, maxime, pariatur odio ipsum ipsa est a! Laborum suscipit vero esse? Veritatis, recusandae iste obcaecati officiis quas aliquam error delectus consectetur voluptatem corrupti, expedita ipsum nostrum ab eos assumenda quaerat optio. Ipsum eius illo tenetur iste necessitatibus eos inventore ullam! Dicta, magnam. Adipisci, officiis! Mollitia omnis commodi sequi repellat laudantium, corporis magni temporibus at, ut porro et unde dolorum qui ea. Cum maxime similique culpa enim aliquam officia voluptas sequi. Maxime quod praesentium rem quaerat necessitatibus sequi veniam magni numquam dicta ea voluptatibus facere ut, debitis commodi possimus distinctio eaque excepturi porro nesciunt corrupti iure repudiandae! Laboriosam nostrum totam hic ipsa et nihil doloremque qui. Perferendis corporis provident, maxime molestiae alias cupiditate id culpa? Consectetur optio eveniet, tenetur modi molestiae quod itaque quasi recusandae vitae culpa perferendis voluptatibus. Culpa, id? Adipisci cupiditate cumque esse sint similique! Distinctio quo iste, ducimus eveniet soluta cum at? Impedit alias quo libero soluta velit nulla iste. Ducimus, nulla? Ipsa hic quo laborum obcaecati ratione! Cumque consectetur consequatur labore velit a cupiditate dignissimos accusantium.
+        <!-- "Best way to eat healthy food" container -->
+        <div class="container py-10 px-5 healthy-meal">
+            <div class="row d-flex justify-content-center text-center">
+                <div class="col-md-11 col-lg-8 col-xl-7 fs-40 fw-bold h-font h-color d-flex justify-content-center">
+                    Best way to eat healthy food
+                </div>
+                <div class="col-md-11 col-lg-8 col-xl-7 fs-18 p-3 d-flex justify-content-center">
+                    Making a reservation at Délicious restaurant is easy and takes just a
+                    couple of minutes.
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-lg-4">
+                    <div class="row text-center p-5 m-2 cards">
+                        <div class="col-12">
+                            <i class="fa-solid fa-wheat-awn"></i>
+                        </div>
+                        <div class="col-12 fs-3 h-font h-color fw-bold py-4 px-0">
+                            Healthy Meal
+                        </div>
+                        <div class="col-12 px-3">
+                            Making a reservation at Délicious restaurant is easy and takes just a
+                            couple of minutes.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4">
+                    <div class="row text-center p-5 m-2 cards">
+                        <div class="col-12">
+                            <i class="fa-solid fa-burger"></i>
+                        </div>
+                        <div class="col-12 fs-3 h-font h-color fw-bold py-4 px-0">
+                            Fast Food
+                        </div>
+                        <div class="col-12 px-3">
+                            Making a reservation at Délicious restaurant is easy and takes just a
+                            couple of minutes.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4">
+                    <div class="row text-center p-5 m-2 cards">
+                        <div class="col-12">
+                            <i class="fa-solid fa-mug-hot"></i>
+                        </div>
+                        <div class="col-12 fs-3 h-font h-color fw-bold py-4 px-0">
+                            Delicious Coffee
+                        </div>
+                        <div class="col-12 px-3">
+                            Making a reservation at Délicious restaurant is easy and takes just a
+                            couple of minutes.
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- Menu container -->
+        <div id="menu-container" class="container-fluid menu-container">
+            <div class="container py-10 px-5">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-8 col-md-6">
+                        <div class="row">
+                            <div class="col-12 h-font fw-bold fs-40 c-white">
+                                Most Popular Dishes
+                            </div>
+                            <div class="col-12 fs-18 py-4">
+                                Making a reservation at Délicious restaurant is easy and takes just a couple of minutes.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-6 d-flex justify-content-end align-items-start">
+                        <a href="/menu"><button type="button"
+                                class="btn btn-danger custom-button py-2 px-3 py-lg-3 px-lg-5 my-4 h-font">Full
+                                Menu</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-start c-white h-font fs-18 ">
+                    <div class="nav-link ">
+                        <div class="d-inline p-2"> Breakfast</div>
+                    </div>
+                    <div class="nav-link ">
+                        <div class="d-inline p-2"> Lunch</div>
+                    </div>
+                    <div class="nav-link ">
+                        <div class="d-inline p-2"> Dinner</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- reservation container -->
+        <div id="reserve-container" class="container py-10 px-5 reserve-container">
+            <div class="row d-flex justify-content-between">
+                <div class="col-md-12 col-lg-7">
+                    <img class="img-fluid" src="./images/home/woner.jpg" alt="">
+                </div>
+                <div class="col-md-12 col-lg-4 ">
+                    <!-- reservation form -->
+                    <form action="">
+                        <div class="row">
+                            <div class="col-12 h-color h-font fs-40 fw-bold ">Book a table</div>
+                            <div class="col-12 py-3">
+                                Making a reservation at Délicious restaurant is easy and takes just a
+                                couple of minutes.
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-12">
+                                <input type="text" name="numberOfGuest" class="form-control rounded-pill my-2 p-2-5"
+                                    placeholder="Number Of Guest">
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                                <input type="text" class="form-control rounded-pill my-2 p-2-5" placeholder="Date"
+                                    onblur="(this.type = 'text')" onfocus="(this.type = 'date')">
+                            </div>
+                            <div class="col-xs-12 col-sm-6">
+                                <select name="category" id="category" class="form-control rounded-pill my-2 p-2-5">
+                                    <option value="Breakfast">Breakfast</option>
+                                    <option value="Lunch" selected>Lunch</option>
+                                    <option value="Dinner">Dinner</option>
+                                </select>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-12">
+                                <input type="tel" class="form-control rounded-pill my-2 p-2-5"
+                                    placeholder="Phone No.">
+                            </div>
+                            <div class="col-xs-12 col-lg-12">
+                                <input type="text" name="" id="" class="form-control rounded-pill my-2 p-2-5"
+                                    placeholder="Email">
+                            </div>
+                            <div class="col-xs-12 col-lg-12">
+                                <textarea name="" id="" rows="3" class="form-control rounded my-2 p-2-5"
+                                    placeholder="Message"></textarea>
+                            </div>
+                            <div class="col-xs-12 col-lg-12">
+                                <button class="button btn btn-danger rounded-pill custom-button w-100 my-2 p-2-5">Sent
+                                    Request</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- photo gellary container -->
+        <div class="container-fluid p-0">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 p-0">
+                    <img class="img-fluid" src="./images/home/instra1.jpg" alt="">
+                </div>
+                <div class="d-none d-sm-block col-xs-12 col-sm-6 col-md-4 col-lg-3 p-0">
+                    <img class="img-fluid" src="./images/home/instra2.jpg" alt="">
+                </div>
+                <div class="d-none d-md-block col-xs-12 col-sm-6 col-md-4 col-lg-3 p-0">
+                    <img class="img-fluid" src="./images/home/instra3.jpg" alt="">
+                </div>
+                <div class="d-none d-lg-block col-xs-12 col-sm-6 col-md-4 col-lg-3 p-0">
+                    <img class="img-fluid" src="./images/home/instra4.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- footer -->
+        <%- include('partials/footer') %>
+
 </body>
 
 </html>
