--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,17 +4,18 @@
             <div class="container py-2">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-6">
-                        <div class="row d-flex justify-content-between">
+                        <div class="row d-flex justify-content-between top-header">
                             <div class="col-sm-12 col-lg-4 logo d-flex">
                                 <i class="fa-solid fa-utensils fs-4 p-2 me-2"></i>
                                 Restauco
                             </div>
                             <div class=" col-lg-8 d-none d-lg-flex align-items-center justify-content-center p-0 m-0">
-                                <div class="row d-flex justify-content-between p-0 m-0">
-                                    <div class="col-lg-3 d-flex justify-content-center"><a href="">Home</a></div>
-                                    <div class="col-lg-3 d-flex justify-content-center"><a href="">Menu</a></div>
-                                    <div class="col-lg-3 d-flex justify-content-center"><a href="">About</a></div>
-                                    <div class="col-lg-3 d-flex justify-content-center"><a href="">Contact</a></div>
+                                <div class="row d-flex justify-content-between p-0 m-0 nav-links">
+                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/">Home</a></div>
+                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/menu">Menu</a></div>
+                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/about">About</a></div>
+                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/contact">Contact</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -22,8 +23,9 @@
                     <div class="d-none d-xs-none d-sm-none d-md-block d-lg-block col-md-6">
                         <div class="row ">
                             <div class="col d-flex justify-content-end">
-                                <button type="button" class="btn btn-danger custom-button py-2 px-md-5">Book a
-                                    Table</button>
+                                <a href="#reserve-container"><button type="button" class="btn btn-danger custom-button py-2 px-md-5">Book
+                                        a Table</button>
+                                </a>
                             </div>
                         </div>
                     </div>
