--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,11 @@
                     <div class="d-none d-xs-none d-sm-none d-md-block d-lg-block col-md-6">
                         <div class="row ">
                             <div class="col d-flex justify-content-end">
-                                <a href="#reserve-container"><button type="button" class="btn btn-danger custom-button py-2 px-md-5">Book
+                                <div class="admin text-center mx-4 d-flex align-items-center h-font">
+                                    <a href="/adminLogin">Admin Login</a>
+                                </div>
+                                <a href="#reserve-container"><button type="button"
+                                        class="btn btn-danger custom-button py-2 px-md-5">Book
                                         a Table</button>
                                 </a>
                             </div>
@@ -31,10 +35,10 @@
                     </div>
                 </div>
                 <div class="row d-lg-none shadow p-2">
-                    <div class="col-3 d-flex justify-content-center"><a href="">Home</a></div>
-                    <div class="col-3 d-flex justify-content-center"><a href="">Menu</a></div>
-                    <div class="col-3 d-flex justify-content-center"><a href="">About</a></div>
-                    <div class="col-3 d-flex justify-content-center"><a href="">Contact</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a href="/">Home</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a href="/menu">Menu</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a href="/about">About</a></div>
+                    <div class="col-3 d-flex justify-content-center"><a href="/contact">Contact</a></div>
                 </div>
             </div>
         </div>
@@ -50,14 +54,19 @@
 
             topHeader.firstElementChild.classList.remove('position-absolute');
             topHeader.firstElementChild.classList.add('position-fixed');
+            
+            document.querySelector(".admin").classList.add('admin-scroll');
+            document.querySelector(".admin").classList.remove('admin');
         } else {
             topHeader.firstElementChild.firstElementChild.classList.add('bg-transparent');
             topHeader.firstElementChild.firstElementChild.classList.remove('bg-custom');
             topHeader.firstElementChild.firstElementChild.classList.remove('shadow-lg');
-
+            
             topHeader.firstElementChild.classList.add('position-absolute');
             topHeader.firstElementChild.classList.remove('position-fixed');
-
+            
+            document.querySelector(".admin-scroll").classList.add('admin');
+            document.querySelector(".admin-scroll").classList.remove('admin-scroll');
         }
     });
 
