--- a/views/adminView.ejs
+++ b/views/adminView.ejs
@@ -10,6 +10,7 @@
 <body>
     <%- include('partials/header') %>
     <h1>Admin View</h1>
+    <h2><%- adminData.name %></h2>
     <%- include('partials/footer') %>
 </body>
 </html>
