--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,6 +12,9 @@
 <link rel="stylesheet" href="./stylesheets/partials/header.css">
 <link rel="stylesheet" href="./stylesheets/partials/footer.css">
 
+<!-- /* public common css */ -->
+<link rel="stylesheet" href="./stylesheets/common.css">
+
 <!-- google font  -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mitr">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rampart One">
