res.render() is not working in adminLogin.js  in 'controllers'

--- a/views/adminView.ejs
+++ b/views/adminView.ejs
@@ -8,9 +8,9 @@
     <title>admin View</title>
 </head>
 <body>
-    <!-- <%- include('partials/header') %> -->
+    <%- include('partials/header') %>
     <h1>Admin View</h1>
-    <!-- <h2><%- adminData.name %></h2> -->
-    <!-- <%- include('partials/footer') %> -->
+    <h2><%- name %></h2>
+    <%- include('partials/footer') %>
 </body>
 </html>
