--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,8 +14,8 @@
     <!-- navbar (header) -->
     <%- include('partials/header') %>
         <!-- "title" container -->
-        <div class="container-fluid header h-font h-color">
-            <div class="row">
+        <div class="container-fluid header pt-5 p-lg-0 h-font h-color">
+            <div class="row pt-5 pt-lg-0">
                 <div class="col-xs-12 col-lg-6 d-flex align-items-stretch ps-2 ps-lg-5">
                     <div class="d-flex align-items-center px-5">
                         <div class="row pt-5 pt-lg-0">
@@ -40,7 +40,7 @@
             </div>
         </div>
         <!-- "Best way to eat healthy food" container -->
-        <div class="container py-10 px-5 healthy-meal">
+        <div class="container py-10  healthy-meal">
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-md-11 col-lg-8 col-xl-7 fs-40 fw-bold h-font h-color d-flex justify-content-center">
                     Best way to eat healthy food
@@ -138,7 +138,7 @@
                 <div class="col-md-12 col-lg-4 ">
                     <!-- reservation form -->
                     <form action="">
-                        <div class="row">
+                        <div class="row pt-5 pt-lg-0">
                             <div class="col-12 h-color h-font fs-40 fw-bold ">Book a table</div>
                             <div class="col-12 py-3">
                                 Making a reservation at Délicious restaurant is easy and takes just a
