--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
-<div id="topHeader" class="container-fluid position-relative ">
-    <div class="position-absolute top-0 start-50 translate-middle-x w-100">
-        <div class="container-fluid py-2">
-            <div class="container py-2">
+<div id="topHeader" class="container-fluid position-relative px-0">
+    <div class="for-admin position-absolute top-0 start-50 translate-middle-x w-100">
+        <div class="container-fluid px-0 for-shadow ">
+            <div class="container-fluid container-lg py-0 py-lg-3">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-6">
-                        <div class="row d-flex justify-content-between top-header">
+                        <div class="row d-none d-lg-flex justify-content-between top-header">
                             <div class="col-sm-12 col-lg-4 logo d-flex">
                                 <i class="fa-solid fa-utensils fs-4 p-2 me-2"></i>
                                 Restauco
@@ -20,7 +20,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-none d-xs-none d-sm-none d-md-block d-lg-block col-md-6">
+                    <div class="d-none d-xs-none d-sm-none  d-lg-block col-md-6">
                         <div class="row ">
                             <div class="col d-flex justify-content-end">
                                 <div class="admin text-center mx-4 d-flex align-items-center h-font">
@@ -34,40 +34,54 @@
                         </div>
                     </div>
                 </div>
-                <div class="row d-lg-none shadow p-2">
-                    <div class="col-3 d-flex justify-content-center"><a href="/">Home</a></div>
-                    <div class="col-3 d-flex justify-content-center"><a href="/menu">Menu</a></div>
-                    <div class="col-3 d-flex justify-content-center"><a href="/about">About</a></div>
-                    <div class="col-3 d-flex justify-content-center"><a href="/contact">Contact</a></div>
+                <div class="row d-flex d-lg-none pb-3 py-3  align-items-center shadow-lg ">
+                    <div class="col-12">
+                        <div class="row d-flex justify-content-between py-3">
+                            <div class="col-6 col-lg-4 logo d-flex">
+                                <i class="fa-solid fa-utensils fs-4 p-2 me-2"></i>
+                                Restauco
+                            </div>
+                            <div class="col-6 d-flex d-sm-none  justify-content-end">
+                                <div class="admin-scroll-responsive text-center d-flex align-items-center h-font h-color mx-2">
+                                    <a href="/adminLogin">
+                                        Admin Login
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-5">
+                        <div class="row nav-links">
+                            <div class="col-3 px-md-0 d-flex justify-content-center"><a href="/">Home</a></div>
+                            <div class="col-3 px-2 px-md-0 d-flex justify-content-center"><a href="/menu">Menu</a>
+                            </div>
+                            <div class="col-3 px-md-0 d-flex justify-content-center"><a href="/about">About</a>
+                            </div>
+                            <div class="col-3 px-md-0 d-flex justify-content-center"><a href="/contact">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-6 col-md-7">
+                        <div class="d-flex align-items-center justify-content-end">
+                            <div class="d-none d-sm-block">
+                                <div class="admin-scroll-responsive text-center d-flex align-items-center h-font h-color mx-3">
+                                    <a href="/adminLogin">
+                                        Admin Login
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="">
+                                <a href="#reserve-container">
+                                    <button type="button" class="btn btn-danger custom-button">Book
+                                        a Table
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script>
-    window.addEventListener('scroll', function () {
-        let topHeader = document.getElementById('topHeader');
-        if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-            topHeader.firstElementChild.firstElementChild.classList.remove('bg-transparent');
-            topHeader.firstElementChild.firstElementChild.classList.add('bg-custom');
-            topHeader.firstElementChild.firstElementChild.classList.add('shadow-lg');
-
-            topHeader.firstElementChild.classList.remove('position-absolute');
-            topHeader.firstElementChild.classList.add('position-fixed');
-            
-            document.querySelector(".admin").classList.add('admin-scroll');
-            document.querySelector(".admin").classList.remove('admin');
-        } else {
-            topHeader.firstElementChild.firstElementChild.classList.add('bg-transparent');
-            topHeader.firstElementChild.firstElementChild.classList.remove('bg-custom');
-            topHeader.firstElementChild.firstElementChild.classList.remove('shadow-lg');
-            
-            topHeader.firstElementChild.classList.add('position-absolute');
-            topHeader.firstElementChild.classList.remove('position-fixed');
-            
-            document.querySelector(".admin-scroll").classList.add('admin');
-            document.querySelector(".admin-scroll").classList.remove('admin-scroll');
-        }
-    });
-
-</script>
+<script id="headerScript" src="./javascripts/partials/headerScroll.js" ></script>
