--- a/views/menuInsertEdit.ejs
+++ b/views/menuInsertEdit.ejs
@@ -13,8 +13,8 @@
 <body>
     <div class="container py-5">
         <div class="row d-flex justify-content-center">
-            <div class="col-xs-12 col-sm-10 col-md-6 col-lg-4 rounded shadow-lg">
-                <h1 class="text-center h-color h-font py-5">Insert New Item</h1>
+            <div class="col-xs-12 col-sm-10 col-md-8 col-lg-4 rounded shadow-lg">
+                <h1 class="text-center h-color h-font pt-5">Insert New Item</h1>
                 <form action="/adminLogin/menu/insertDB" method="post">
                     <div class="row">
                         <div class="col-xs-12">
@@ -40,9 +40,9 @@
                             <textarea name="" id="" rows="3" class="form-control rounded my-2 p-2-5"
                                     placeholder="description"></textarea>
                         </div>
-                        <div class="col-xs-12 col-sm-6">
+                        <div class="col-xs-12">
                             <button type="submit"
-                                class="form-control rounded-pill shadow-sm custom-button my-4 p-2-5">LogIn</button>
+                                class="form-control rounded-pill shadow-sm custom-button my-4 p-2-5">Add Item</button>
                         </div>
                     </div>
                 </form>
