--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
                         <div class="row ">
                             <div class="col d-flex justify-content-end">
                                 <div class="admin text-center mx-4 d-flex align-items-center h-font">
-                                    <a href="/adminLogin">Admin Login</a>
+                                    <a id="log-out" href="/adminLogin/adminView">Admin Login</a>
                                 </div>
                                 <a href="#reserve-container"><button type="button"
                                         class="btn btn-danger custom-button py-2 px-md-5">Book
@@ -43,7 +43,7 @@
                             </div>
                             <div class="col-6 d-flex d-sm-none  justify-content-end">
                                 <div class="admin-scroll-responsive text-center d-flex align-items-center h-font h-color mx-2">
-                                    <a href="/adminLogin">
+                                    <a  id="log-out"href="/adminLogin/adminView">
                                         Admin Login
                                     </a>
                                 </div>
@@ -84,4 +84,4 @@
         </div>
     </div>
 </div>
-<script id="headerScript" src="./javascripts/partials/headerScroll.js" ></script>
+<script id="headerScript" src="./../javascripts/partials/headerScroll.js" ></script>
