--- a/views/adminView.ejs
+++ b/views/adminView.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%- include('partials/head') %>
-        <link rel="stylesheet" href="./stylesheets/adminView.css">
+        <link rel="stylesheet" id="static-link" href="./../stylesheets/adminView.css">
         <title>admin View</title>
 </head>
 
@@ -61,8 +61,6 @@
                             <button type="button" id="insertMenu" class="btn btn-outline-secondary fs-4  c-orange">
                                 <i class="fa-solid fa-plus"></i>
                             </button>
-                            <script src="./javascripts/adminView/insertMenu.js"></script>
-
                         </div>
                     </div>
                 </div>
@@ -72,6 +70,7 @@
         </div>
         </div>
         <%- include('partials/footer') %>
+            <script src="./../javascripts/adminView/insertMenu.js"></script>
 </body>
 
 </html>
