problem with home pge

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -73,3 +73,8 @@ body {
 .reserve-container .custom-button:hover {
     background-color: #e74929;
 }
+
+form span {
+    color: red;
+    font-size: small;
+}
