--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,11 +9,11 @@
 <script src="https://kit.fontawesome.com/9b43ed10a1.js" crossorigin="anonymous"></script>
 
 <!-- public css -->
-<link rel="stylesheet" id="static-link" href="./../stylesheets/partials/header.css">
-<link rel="stylesheet" id="static-link" href="./../stylesheets/partials/footer.css">
+<link rel="stylesheet" id="static-link" href="./../../stylesheets/partials/header.css">
+<link rel="stylesheet" id="static-link" href="./../../stylesheets/partials/footer.css">
 
 <!-- /* public common css */ -->
-<link rel="stylesheet" id="static-link" href="./../stylesheets/common.css">
+<link rel="stylesheet" id="static-link" href="./../../stylesheets/common.css">
 
 <!-- google font  -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mitr">
