--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -84,4 +84,4 @@
         </div>
     </div>
 </div>
-<script id="headerScript" src="./../javascripts/partials/headerScroll.js" ></script>
+<script id="headerScript" src="./../../javascripts/partials/headerScroll.js" ></script>
