--- a/views/menuInsertEdit.ejs
+++ b/views/menuInsertEdit.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%- include('partials/head') %>
-        <link rel="stylesheet" href="./stylesheets/menuItemEdit.css">
+        <link rel="stylesheet" href="./../stylesheets/menuItemEdit.css">
         <title>menuItemEdit</title>
 </head>
 
@@ -15,7 +15,7 @@
         <div class="row d-flex justify-content-center">
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-4 rounded shadow-lg">
                 <h1 class="text-center h-color h-font pt-5">Insert New Item</h1>
-                <form action="/adminLogin/menu/insertDB" method="post">
+                <form action="/adminLogin/menu/insertDB" method="post" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-xs-12">
                             <input type="text" name="title" id="title"
